# C-Game

./: CMakeLists.txt
assets/shaders/: square.fs  square.vs  texturedrect.fs  texturedrect.vs
examples/snake/: game.c
libs/cglm/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  cglmConfig.cmake  cmake_install.cmake  libcglm.so.0  libcglm.so.0.8.0
libs/glfw-3.3.5/: CMakeCache.txt  Makefile  cmake_install.cmake  cmake_uninstall.cmake
libs/glfw-3.3.5/examples/: Makefile  boing  cmake_install.cmake  gears  heightmap  offscreen  particles  sharing  simple  splitview  wave
libs/glfw-3.3.5/src/: Makefile  cmake_install.cmake
libs/glfw-3.3.5/tests/: Makefile  clipboard  cmake_install.cmake  cursor  empty  events  gamma  glfwinfo  icon  iconify  inputlag  joysticks  monitors  msaa  opacity  reopen  tearing  threads  timeout  title  triangle-vulkan  windows
src/: main.c
src/camera/: camera.c  camera.h
src/game/: game.c  game.h
src/game/entities/player/: player.c  player.h
src/input/: input.c  input.h
src/math/: mathutils.c  mathutils.h  vec.c  vec.h
src/rect/: aabb.c  aabb.h  rect.c  rect.h  texturedrect.c  texturedrect.h
src/shader/: shader.c  shader.h
src/texture/: texture.c  texture.h
src/time/: time.c  time.h
src/util/: color.c  color.h  dynamicarray.c  dynamicarray.h  stb_image_imp.c  util.h
src/window/: window.c  window.h
